Fix issue #26 for overflow text and table overflow on mobile

--- a/assets/scss/modules/_global.scss
+++ b/assets/scss/modules/_global.scss
@@ -105,6 +105,8 @@ p {
     margin-bottom: 20px;
     line-height: 26px;
     font-size: 90%;
+    word-wrap: break-word;
+
     > code {
         @include inline-code-style;
     }
